--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                 <div class="input-field">
                     <i class="fas fa-user"></i>
                     <input type="text" placeholder="Username" id="signin-username">
-                    <div class="error" id="username-error"></div>
+                    <div class="error" id="signin-username-error"></div>
                 </div>
                 <div class="input-field">
                     <i class="fas fa-lock"></i>
                     <input type="password" placeholder="Password" id="signin-password">
-                    <div class="error" id="password-error"></div>
+                    <div class="error" id="signin-password-error"></div>
                 </div>
                 <input type="submit" value="Login" class="btn">
                 <p class="social-text">Or Sign in with social platform</p>
@@ -46,17 +46,17 @@
                 <div class="input-field">
                     <i class="fas fa-user"></i>
                     <input type="text" placeholder="Username" id="signup-username">
-                    <div class="error" id="username-error"></div>
+                    <div class="error" id="signup-username-error"></div>
                 </div>
                 <div class="input-field">
                     <i class="fas fa-envelope"></i>
                     <input type="text" placeholder="Email" id="signup-email">
-                    <div class="error" id="email-error"></div>
+                    <div class="error" id="signup-email-error"></div>
                 </div>
                 <div class="input-field">
                     <i class="fas fa-lock"></i>
                     <input type="password" placeholder="Password" id="signup-password">
-                    <div class="error" id="password-error"></div>
+                    <div class="error" id="signup-password-error"></div>
                 </div>
                 <input type="submit" value="Sign up" class="btn">
                 <p class="social-text">Or Sign in with social platform</p>
@@ -84,7 +84,7 @@
                     <p>Already Have an account?</p>
                     <button class="btn" id="sign-in-btn">Sign in</button>
                 </div>
-                <img src="signin.svg" alt="" class="image">
+                
             </div>
             <div class="panel right-panel">
                 <div class="content">
@@ -92,7 +92,7 @@
                     <p>Create an Account</p>
                     <button class="btn" id="sign-up-btn">Sign up</button>
                 </div>
-                <img src="signup.svg" alt="" class="image">
+                
             </div>
         </div>
     </div>
